kubernetes/app/lubelogger/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lubelogger-db
  namespace: lubelogger
  labels:
    app: lubelogger-db
spec:
  serviceName: lubelogger-db
  replicas: 1
  selector:
    matchLabels:
      app: lubelogger-db
  template:
    metadata:
      labels:
        app: lubelogger-db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-synology-ssd
        resources:
          requests:
            storage: 5Gi
