kubernetes/app/lubelogger/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger-db
  namespace: lubelogger
spec:
  clusterIP: None
  selector:
    app: lubelogger-db
  ports:
    - port: 5432
      targetPort: 5432
